Fix truncated background on /scenarios

--- a/app/assets/stylesheets/_general_layout.sass
+++ b/app/assets/stylesheets/_general_layout.sass
@@ -7,12 +7,6 @@ body#model
   // page changes, such as when opening a slide or sidebar section.
   overflow-y: scroll
 
-body#outside-model #wrapper
-  min-height: 100%
-  height: auto !important
-  height: 100%
-  margin: 0 auto -160px
-
 #wrapper
   min-width: 1170px
   width: 100%
@@ -21,9 +15,6 @@ body#outside-model #wrapper
 * html body#model #wrapper
   height: 100%
   overflow: visible
-
-#outside-model #content
-  margin: 0 10px
 
 #content
   display: flex
